tests/NormalTests/paczka2/big_fuzzy/14981453.err
Error in line 4: S91, S91, 2,5
Error in line 1: S913 A257 88,3
Error in line 6: S913 S913 2,8
Error in line 13: S913 S829 64,5
Error in line 16: S913 A269 20,2
Error in line 12: K2S S829 91,0
Error in line 17: S913 A257 11,2
Error in line 32: qFgYKoW A269 49,8
Error in line 39: EeoRuQsYtC S829 3o,5
Error in line 38: Ee4RuQsYtC S829 27,6
Error in line 25: S913 S913 30,2
Error in line 53: Ee4RuQsYtC S913 45,7
Error in line 56: Ee4RuQsYtC S829 44,2
Error in line 59: i'TzK16w A257 20,0
Error in line 40: iyTzK16w A269 44,7
Error in line 55: S913 S829 22,1
Error in line 63: S913 A257 68,0
Error in line 69: qFgYKoW S913 47,8
Error in line 78: 64dtPYV3cCy A257 25,9
Error in line 80: 64dtPYV3cCy S829 46,1
Error in line 73: S913 A269 2,3
Error in line 86: 64dtPYV3cCy A269 96,8
Error in line 61: iyTzK16w A257 35,8
Error in line 79: qFgYKoW S829 64,3
Error in line 95: iyTzK16w A269 14,9
Error in line 105: iyTzK16w S913 80,4
Error in line 97: Ee4RuQsYtC A257 0,0
Error in line 116: S913 S829 90,7
Error in line 135: UXSvVt S829 19,5
Error in line 140: qFgYKoW S913 181,8
Error in line 152: UXSvVt A269 461,4
Error in line 137: S913 A257 60,0
Error in line 150: K2S S913 57,2
Error in line 165: UXSvVt A269 2,8
Error in line 196: iyTzK16w S829 71,5
Error in line 220: Ee4RuQsYtC S913 54,6
Error in line 226: qFgYKoW A269 10,7
Error in line 222: K2S A269 63,0
Error in line 244: UXSvVt A269 65,1
